--- a/_posts/2019-06-20-zh-css-report-2019.md
+++ b/_posts/2019-06-20-zh-css-report-2019.md
@@ -12,7 +12,7 @@ tags:
   - report
 ---
 
-最新css 2019报告出炉，https://2019.stateofcss.com/
+最新[css 2019](https://2019.stateofcss.com/)报告出炉，.
 
 
 
@@ -20,7 +20,7 @@ tags:
 
 > 内部蓝色圈越大越流行
 
-<svg xmlns="http://www.w3.org/2000/svg" role="img" width="1490" height="500"><rect width="1490" height="500" fill="transparent"></rect><g transform="translate(2,2)"><g><g class="CirclePackingNode" transform="translate(652.937188049159,240.78798650692104)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-css-grid"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-grid" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="108.86713197134382" fill="#9ac6c9"></circle><circle r="60.65919252193051" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Grid</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Grid</text></g><g class="CirclePackingNode" transform="translate(876.3046856915814,240.78798650692104)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-flexbox"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-flexbox" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="109.69701003288617" fill="#9ac6c9"></circle><circle r="104.56046612749326" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Flexbox</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Flexbox</text></g><g class="CirclePackingNode" transform="translate(763.8825856926329,405.1684360470588)"><g><defs><path d="M-110.16076467402621,0a110.16076467402621,110.16076467402621 0 1,0 220.32152934805242,0a110.16076467402621,110.16076467402621 0 1,0 -220.32152934805242,0" id="textcircle-css-multi-column"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402621" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-multi-column" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="84.646968629914" fill="#9ac6c9"></circle><circle r="44.2760956344607" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Multi-Column Layout</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Multi-Column Layout</text></g><g class="CirclePackingNode" transform="translate(763.9852401357901,111.16359756077247)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-css-writing-modes"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-writing-modes" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="57.0168056547765" fill="#9ac6c9"></circle><circle r="15.661268506033029" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Writing Modes</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Writing Modes</text></g><g class="CirclePackingNode" transform="translate(656.758301668298,76.19815091621697)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-css-exclusions"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-exclusions" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="50.96369744650037" fill="#9ac6c9"></circle><circle r="16.88962204631954" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Exclusions</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Exclusions</text></g></g></g></svg>
+<svg xmlns="http://www.w3.org/2000/svg" role="img"  width="500" height="500"><rect width="1490" height="500" fill="transparent"></rect><g transform="translate(2,2)"><g><g class="CirclePackingNode" transform="translate(652.937188049159,240.78798650692104)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-css-grid"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-grid" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="108.86713197134382" fill="#9ac6c9"></circle><circle r="60.65919252193051" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Grid</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Grid</text></g><g class="CirclePackingNode" transform="translate(876.3046856915814,240.78798650692104)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-flexbox"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-flexbox" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="109.69701003288617" fill="#9ac6c9"></circle><circle r="104.56046612749326" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Flexbox</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Flexbox</text></g><g class="CirclePackingNode" transform="translate(763.8825856926329,405.1684360470588)"><g><defs><path d="M-110.16076467402621,0a110.16076467402621,110.16076467402621 0 1,0 220.32152934805242,0a110.16076467402621,110.16076467402621 0 1,0 -220.32152934805242,0" id="textcircle-css-multi-column"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402621" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-multi-column" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="84.646968629914" fill="#9ac6c9"></circle><circle r="44.2760956344607" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Multi-Column Layout</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Multi-Column Layout</text></g><g class="CirclePackingNode" transform="translate(763.9852401357901,111.16359756077247)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-css-writing-modes"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-writing-modes" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="57.0168056547765" fill="#9ac6c9"></circle><circle r="15.661268506033029" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Writing Modes</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Writing Modes</text></g><g class="CirclePackingNode" transform="translate(656.758301668298,76.19815091621697)"><g><defs><path d="M-110.16076467402623,0a110.16076467402623,110.16076467402623 0 1,0 220.32152934805245,0a110.16076467402623,110.16076467402623 0 1,0 -220.32152934805245,0" id="textcircle-css-exclusions"></path></defs><circle class="CirclePackingNode__TotalCircle" r="110.16076467402623" stroke="#F649A7" stroke-width="2" fill="rgba(0,0,0,0.3)"></circle><text class="CirclePackingNode__TotalCircleLabel" dy="20" dx="0"><textPath xlink:href="#textcircle-css-exclusions" fill="#F649A7">Total Respondents: 11307</textPath></text></g><circle r="50.96369744650037" fill="#9ac6c9"></circle><circle r="16.88962204631954" fill="#3c52d1"></circle><text text-anchor="middle" dominant-baseline="central" stroke="#343539" stroke-width="4" stroke-linejoin="round" style="pointer-events: none; font-size: 14px; font-weight: 600;">Exclusions</text><text text-anchor="middle" dominant-baseline="central" fill="#ffffff" style="pointer-events: none; font-size: 14px; font-weight: 600;">Exclusions</text></g></g></g></svg>
 
 ### 动画用的较多
 
